<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/bg_blue"
    tools:ignore="RtlHardcoded"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp"
        app:expanded="false"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            android:clipChildren="false"
            android:clipToPadding="false"
            >


            <android.support.v7.widget.Toolbar
                android:id="@+id/main.toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:paddingEnd="12dp"
                android:paddingStart="12dp"
                android:paddingTop="12dp"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin"
                android:clipChildren="false"
                android:clipToPadding="false"
                app:theme="@style/ThemeOverlay.AppCompat.Dark"
                >

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/containerHeaders"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/ivAvatar"
                        android:layout_width="@dimen/avatar_medium"
                        android:layout_height="@dimen/avatar_medium"
                        android:src="@drawable/ic_user"

                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txtYou"
                        style="@style/TxtWhiteLight"
                        android:layout_marginStart="8dp"
                        android:text="@string/you"

                        android:textSize="28sp"
                        app:layout_constraintLeft_toRightOf="@id/ivAvatar"
                        app:layout_constraintTop_toTopOf="@id/ivAvatar" />

                    <TextView
                        android:id="@+id/txtNoCards"
                        style="@style/TxtWhiteThin"
                        android:text="@string/no_cards_yet"
                        android:textSize="16sp"

                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@id/ivAvatar"
                        app:layout_constraintLeft_toLeftOf="@id/txtYou" />

                    <android.widget.Space
                        android:id="@+id/spaceToolbar"
                        android:layout_width="1dp"
                        android:layout_height="@dimen/item_card_small_height"

                        app:layout_constraintLeft_toLeftOf="@id/txtYou"
                        app:layout_constraintTop_toBottomOf="@id/txtYou" />

                    <TextView
                        android:id="@+id/txtDebt"
                        style="@style/TxtWhiteLight"
                        android:layout_marginEnd="12dp"
                        android:text="- 890 ₴"
                        android:textAlignment="viewEnd"

                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="@id/txtYou"
                        app:layout_constraintRight_toRightOf="parent" />

                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.Toolbar>

            <FrameLayout
                android:id="@+id/main.framelayout.title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:orientation="vertical"

                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5">

                <LinearLayout
                    android:id="@+id/main.linearlayout.title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <include
                        android:id="@+id/card1"
                        layout="@layout/item_card_small_main"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="4dp" />

                    <include
                        android:id="@+id/card2"
                        layout="@layout/item_card_small_main"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <android.widget.Space
                        android:id="@+id/spaceCards"
                        android:layout_width="1dp"
                        android:layout_height="@dimen/item_card_small_height_double"

                        android:layout_marginTop="4dp"
                        app:layout_constraintLeft_toLeftOf="@id/txtYou"
                        app:layout_constraintTop_toBottomOf="@id/txtYou" />

                </LinearLayout>
            </FrameLayout>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/contentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layers"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/dummyText"
            style="@style/TxtBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum" />
    </android.support.v4.widget.NestedScrollView>

    <include
        android:id="@+id/bottom_shadow"
        style="@style/BottomShadowRect"
        layout="@layout/shadow_rect_top"
        android:layout_gravity="bottom" />

</android.support.design.widget.CoordinatorLayout>